# learn_opencv

./: CMakeLists.txt  README.md
kmeas/: CMakeLists.txt  main.cpp
kmeas/include/: kmeas.h
stack/: ArrayStack.h  CMakeLists.txt  main.cpp
